updating home page

--- a/etp/src/app/modules/auth/reset/reset.component.html
+++ b/etp/src/app/modules/auth/reset/reset.component.html
@@ -35,7 +35,12 @@
             formControlName="confirm"
           />
         </div>
-        <button mat-raised-button class="btn btn-block mt-3" type="button" i18n>
+        <button
+          mat-raised-button
+          class="btn btn-block btn-primary mt-3 transition-3d-hover"
+          type="button"
+          i18n
+        >
           SAVE
         </button>
       </form>
