--- a/etp/src/app/modules/auth/signin/signin.component.scss
+++ b/etp/src/app/modules/auth/signin/signin.component.scss
@@ -2,6 +2,12 @@
 .btn {
   height: 33px !important;
   line-height: 10px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  // background-color: $primary;
+  // color: white;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .signup p {
