--- a/etp/src/app/modules/auth/signup/signup.component.html
+++ b/etp/src/app/modules/auth/signup/signup.component.html
@@ -69,7 +69,7 @@
         <button
           mat-raised-button
           (click)="signup()"
-          class="btn btn-block mt-3"
+          class="btn btn-block btn-primary mt-3 transition-3d-hover"
           type="submit"
           i18n
         >
