--- a/etp/src/app/modules/dashboard/e-market/e-market.component.html
+++ b/etp/src/app/modules/dashboard/e-market/e-market.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="card dash-card shadow-sm h-100">
+    <div class="card dash-card h-100">
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-borderless table-vertical-center">
@@ -62,7 +62,7 @@
 </div>
 
 <!-- sell electric Modal -->
-<ng-template #sell let-modal class="shadow-sm">
+<ng-template #sell let-modal class="">
   <div class="card modal-card">
     <div class="card-header">
       <h1 class="small d-inline" i18n>Add new sell order</h1>
@@ -169,7 +169,7 @@
 
 <!-- buy electric Modal -->
 
-<ng-template #buy let-modal class="shadow-sm">
+<ng-template #buy let-modal class="">
   <div class="card modal-card">
     <div class="card-header">
       <h1 class="small d-inline" i18n>Buy Electricity</h1>
