--- a/etp/src/app/modules/dashboard/nodes/nodes.component.html
+++ b/etp/src/app/modules/dashboard/nodes/nodes.component.html
@@ -28,12 +28,12 @@
         </div>
       </div>
     </div>
-    <div class="card dash-card shadow-sm">
+    <div class="card dash-card">
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-borderless table-vertical-center">
             <thead>
-              <tr class="text-white table-head shadow-sm">
+              <tr class="text-white table-head">
                 <th style="min-width: 170px;" i18n>Name</th>
                 <th style="min-width: 170px;">
                   Available <span>iytecoin</span>
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<ng-template #sell let-modal class="shadow-sm">
+<ng-template #sell let-modal class="">
   <div class="card modal-card">
     <div class="card-header">
       <h1 class="small d-inline">
