--- a/etp/src/app/modules/home/about/about.component.html
+++ b/etp/src/app/modules/home/about/about.component.html
@@ -36,7 +36,9 @@
                 data-aos-duration="1000"
               >
                 <div class="media-body">
-                  <h3 class="h6 text-center">Peer-to-peer energy trading</h3>
+                  <h3 class="h6 text-center text-secondary">
+                    Peer-to-Peer Energy Trading
+                  </h3>
                   <p class="mb-0 text-justify">
                     Solar Bankers is developing a Peer-to-peer online platform
                     that enables end users to trade electricity among themselves
