--- a/etp/src/app/modules/home/contact/contact.component.html
+++ b/etp/src/app/modules/home/contact/contact.component.html
@@ -40,6 +40,7 @@
               data-aos="fade-up"
               data-aos-duration="1000"
               data-aos-delay="1200"
+              class="text-secondary"
             >
               Find the right solution.
             </p>
@@ -167,7 +168,7 @@
             data-aos-duration="1000"
             data-aos-delay="1500"
             type="submit"
-            class="btn btn-primary transition-3d-hover"
+            class="btn btn-dark transition-3d-hover"
           >
             Submit
           </button>
