--- a/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="list">
     <mat-list *ngFor="let item of data.report">
-      <div class="reports shadow-sm">
+      <div class="reports">
         <div class="row">
           <div class="col-lg-4 col-md-5 col-6">
             <i
