--- a/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/settings-devices/settings-devices.component.html
@@ -1,6 +1,6 @@
 <div class="mx-auto my-2" title="{{ options.navName | titlecase }}">
   <div
-    class="card dash-card shadow-sm-sm"
+    class="card dash-card -sm"
     routerLink="/dashboard/settings/{{ options.route }}"
     routerLinkActive="active"
     [class.w-tablet]="set.isMedium$ | async"
