--- a/etp/src/assets/scss/theme.scss
+++ b/etp/src/assets/scss/theme.scss
@@ -6,15 +6,15 @@
 
 // Bootstrap core
 $enable-grid-classes: false;
-$primary: #2f3b52;
-$secondary: #b99745;
+$primary: #1f8efa;
+$secondary: #657d95;
 $success: #05c985;
 $danger: #ee423d;
+$info: #17a2b8;
 $warning: #ffab4f;
 $light: #f8f9fa;
-$dark: #20293c;
+$dark: #2f3b52;
 @import "bootstrap";
-
 /*----------------------------------------------------------------------
   * Front - Responsive Website Template version v2.9.0
   * Copyright 2018 Htmlstream
