--- a/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/modules/auth/complete-registeration/complete-registeration.component.html
@@ -12,7 +12,11 @@
           </p>
           <div class="mx-auto">
             <a href="/auth" routerLink="/auth"
-              ><button mat-raised-button class="btn btn-primary px-4 my-3" i18n>
+              ><button
+                mat-raised-button
+                class="btn btn-primary transition-3d-hover px-4 my-3"
+                i18n
+              >
                 Log in
               </button></a
             >
@@ -100,7 +104,7 @@
         <button
           mat-raised-button
           type="button"
-          class="btn btn-block mt-3"
+          class="btn btn-block mt-3 transition-3d-hover"
           type="submit"
           (click)="submit()"
           i18n
