--- a/etp/src/app/modules/auth/reset/reset.component.scss
+++ b/etp/src/app/modules/auth/reset/reset.component.scss
@@ -1,4 +1,12 @@
+@import "variables.scss";
+
 .btn {
   height: 33px !important;
   line-height: 10px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  background-color: $primary;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
 }
