--- a/etp/src/app/modules/auth/signin/signin.component.html
+++ b/etp/src/app/modules/auth/signin/signin.component.html
@@ -43,7 +43,7 @@
         </div>
         <button
           mat-raised-button
-          class="btn btn-block mt-3"
+          class="btn btn-block btn-primary mt-3 transition-3d-hover"
           *ngIf="isSignin"
           type="submit"
           (click)="signin()"
@@ -53,7 +53,7 @@
         </button>
         <button
           mat-raised-button
-          class="btn btn-block mt-3"
+          class="btn btn-block btn-soft-primary mt-3 transition-3d-hover"
           *ngIf="isReset"
           type="submit"
           i18n
