--- a/etp/src/app/modules/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/modules/dashboard/analytics/analytics.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div class="container-fluid">
     <h2 class="dash-title" i18n>IOT device status</h2>
-    <div class="card dash-card mb-2 shadow-sm">
+    <div class="card dash-card mb-2">
       <div class="card-body">
         <div class="row">
           <div class="col-lg-4 col-md-5 col-sm-6">
@@ -88,7 +88,7 @@
       </div>
     </div>
     <!-- Bottom cards  -->
-    <div class="card dash-card shadow-sm h-100">
+    <div class="card dash-card h-100">
       <div class="card-body">
         <p>meter status control</p>
         <div class="table-responsive">
@@ -133,7 +133,7 @@
         [class.cols]="!(set.isTablet$ | async)"
         *ngFor="let item of data.devices"
       >
-        <div class="card dash-card shadow-sm my-2">
+        <div class="card dash-card  my-2">
           <div class="card-body">
             <div class="d-flex flex-wrap">
               <p class="mr-auto">{{ item.name | titlecase }}</p>
