--- a/etp/src/app/modules/home/hero/hero.component.html
+++ b/etp/src/app/modules/home/hero/hero.component.html
@@ -19,24 +19,11 @@
         </p>
       </div>
 
-      <div class="mb-3 d-flex">
-        <div class="input-group my-auto">
-          <input
-            type="email"
-            class="form-control"
-            name="lasstName"
-            placeholder="Email address"
-            aria-label="email"
-            required
-            data-msg="Please enter your last name."
-            data-error-class="u-has-error"
-            data-success-class="u-has-success"
-          />
-        </div>
+      <div class="d-flex align-items-center flex-wrap">
         <a
-          class="btn btn-primary mx-1 btn-sm my-auto h-100 transition-3d-hover"
-          href="#"
-          >Subscribe</a
+          class="btn btn-soft-dark btn-wide transition-3d-hover"
+          routerLink="/auth"
+          >Get Started</a
         >
       </div>
 
