--- a/etp/src/app/modules/home/landing/landing.component.html
+++ b/etp/src/app/modules/home/landing/landing.component.html
@@ -109,6 +109,16 @@
                 >
               </li>
               <!-- End Contact-->
+              <!-- Button -->
+              <li class="nav-item u-header__nav-last-item">
+                <a
+                  class="btn btn-sm btn-dark transition-3d-hover"
+                  routerLink="/auth/"
+                >
+                  Get Started
+                </a>
+              </li>
+              <!-- End Button -->
             </ul>
           </div>
           <!-- End Navigation -->
@@ -211,11 +221,11 @@
         <div class="col-md-4 mb-7 mb-md-0">
           <!-- Contacts -->
           <div class="media">
-            <span class="btn btn-icon btn-soft-primary rounded-circle mr-3">
+            <span class="btn btn-icon btn-soft-dark rounded-circle mr-3">
               <span class="fas fa-phone btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-primary font-weight-normal mb-0">Call us</h4>
+              <h4 class="h6 text-dark font-weight-normal mb-0">Call us</h4>
               <span class="d-block font-size-1">+90(232)503 6718</span>
             </div>
           </div>
@@ -225,11 +235,11 @@
         <div class="col-md-4 mb-7 mb-md-0">
           <!-- Contacts -->
           <div class="media">
-            <span class="btn btn-icon btn-soft-primary rounded-circle mr-3">
+            <span class="btn btn-icon btn-soft-dark rounded-circle mr-3">
               <span class="fas fa-envelope btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-primary font-weight-normal mb-0">
+              <h4 class="h6 text-dark font-weight-normal mb-0">
                 Email us
               </h4>
               <span class="d-block font-size-1">info@solarbankers.org</span>
@@ -241,11 +251,11 @@
         <div class="col-md-4">
           <!-- Contacts -->
           <div class="media">
-            <span class="btn btn-icon btn-soft-primary rounded-circle mr-3">
+            <span class="btn btn-icon btn-soft-dark rounded-circle mr-3">
               <span class="fas fa-map-marker-alt btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-primary font-weight-normal mb-0">Address</h4>
+              <h4 class="h6 text-dark font-weight-normal mb-0">Address</h4>
               <span class="d-block font-size-1"
                 >Mah. Gülbahçhe Cadç İYTE Teknopark İzmir A9 Binası, No. 1/44/4
                 Urla/İzmir</span
@@ -262,7 +272,7 @@
       <ul class="list-inline mb-4">
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-primary btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
             href="https://www.facebook.com/solarbankerseurope/"
           >
             <span class="fab fa-facebook-f btn-icon__inner h6"></span>
@@ -270,7 +280,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-primary btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
             href="https://twitter.com/solarbankers_?lang=en"
           >
             <span class="fab fa-twitter btn-icon__inner h6"></span>
@@ -278,7 +288,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-primary btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
             href="https://t.me/solarbankersICO"
           >
             <span class="fab fa-telegram btn-icon__inner h6"></span>
@@ -286,7 +296,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-primary btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
             href="https://www.linkedin.com/company/solar-bankers-turkey/"
           >
             <span class="fab fa-linkedin btn-icon__inner h6"></span>
