updated home page

--- a/etp/src/app/modules/auth/authhome/authhome.component.html
+++ b/etp/src/app/modules/auth/authhome/authhome.component.html
@@ -9,12 +9,15 @@
       </div>
     </div>
   </div>
-  <div class="col-xl-5 col-lg-9 col-md-12 mx-auto">
+  <div
+    class="col-xl-5 col-lg-9 col-md-12 mx-auto bg2"
+    style="min-height: 100vh;"
+  >
     <div class="container">
       <div class="auth-logo">
         <a href="" routerLink="">
           <img
-            src="/assets/img/mainlogo1.png"
+            src="/assets/img/home/logo.png"
             alt="Solar bankers logo"
             class="img-fluid"
         /></a>
