--- a/etp/src/app/modules/auth/signup/signup.component.html
+++ b/etp/src/app/modules/auth/signup/signup.component.html
@@ -18,7 +18,7 @@
           </p>
         </div>
       </div>
-      <div class="error d-block w-auto" *ngIf="errorMsg && !signedUp">
+      <div class="error d-block mx-5" *ngIf="errorMsg && !signedUp">
         <div class="alert alert-danger px-5" role="alert">
           <span i18n>{{ errorMsg | titlecase }}</span>
         </div>
