--- a/etp/src/app/modules/dashboard/e-market/e-market.component.html
+++ b/etp/src/app/modules/dashboard/e-market/e-market.component.html
@@ -93,7 +93,7 @@
           >
             <form action="" [formGroup]="sellForm">
               <div class="form-group">
-                <label for="Energy"> Energy Kw/h</label>
+                <label for="Energy" i18n> Energy Kw/h</label>
                 <input
                   type="text"
                   class="form-control"
