--- a/etp/src/assets/scss/_user.scss
+++ b/etp/src/assets/scss/_user.scss
@@ -1,3 +1,9 @@
 /*------------------------------------
   File for your custom SCSS style
 ------------------------------------*/
+.u-header__nav-link {
+  color: #ccc;
+}
+.card {
+  border: none !important;
+}
