--- a/etp/src/assets/scss/theme.scss
+++ b/etp/src/assets/scss/theme.scss
@@ -6,14 +6,14 @@
 
 // Bootstrap core
 $enable-grid-classes: false;
-$primary: #1f8efa;
+$primary: #b99745;
 $secondary: #657d95;
 $success: #05c985;
 $danger: #ee423d;
 $info: #17a2b8;
 $warning: #ffab4f;
 $light: #f8f9fa;
-$dark: #2f3b52;
+$dark: #3e4e6c;
 @import "bootstrap";
 /*----------------------------------------------------------------------
   * Front - Responsive Website Template version v2.9.0
