--- a/etp/src/app/modules/auth/authhome/authhome.component.scss
+++ b/etp/src/app/modules/auth/authhome/authhome.component.scss
@@ -1,12 +1,12 @@
 @import "variables.scss";
 .auth-side {
-  background-image: url(/assets/img/bitmap.png);
+  background-image: url(/assets/img/System.gif);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
   height: 100%;
-  box-shadow: inset 0 0 0 2000px rgba(47, 59, 82, 0.9);
+  // box-shadow: inset 0 0 0 2000px #b99645a6;
   // width: 100%;
   margin: 0 -15px;
 }
