--- a/etp/src/app/modules/dashboard/e-market/e-market.component.scss
+++ b/etp/src/app/modules/dashboard/e-market/e-market.component.scss
@@ -79,7 +79,6 @@
     color: #fff;
   }
   .bills {
-    font-size: 5vh;
     color: white;
     font-weight: 400;
     span,
@@ -88,10 +87,11 @@
       font-weight: 300;
     }
     span {
-      font-size: 20px;
+      font-size: 18px;
+      margin-left: 5px;
     }
     small {
-      font-size: 14px;
+      font-size: 10px;
     }
   }
 
@@ -133,6 +133,19 @@ input {
   width: auto !important;
   box-shadow: none !important;
   border: none;
+}
+input,
+textarea {
+  background-color: $darkbg !important;
+  caret-color: $primary;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 3px;
+  border: 1px solid $bg2 !important;
+  &:focus {
+    background-color: $darkbg !important;
+    border: 1px solid $primary !important;
+  }
 }
 .custom-control-label {
   &::before {
