--- a/etp/src/app/modules/home/about/about.component.html
+++ b/etp/src/app/modules/home/about/about.component.html
@@ -5,10 +5,16 @@
     <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-9">
       <span
         data-aos="fade-up"
-        class="d-block text-secondary font-size-1 font-weight-medium text-uppercase mb-2"
+        class="d-block text-primary font-size-1 font-weight-medium text-uppercase mb-2"
+        i18n
         >WELCOME</span
       >
-      <h2 class="font-weight-medium" data-aos="fade-up" data-aos-delay="500">
+      <h2
+        class="font-weight-medium"
+        data-aos="fade-up"
+        data-aos-delay="500"
+        i18n
+      >
         We provide technology smart enough to save your power and sell the
         extra.
       </h2>
@@ -36,10 +42,10 @@
                 data-aos-duration="1000"
               >
                 <div class="media-body">
-                  <h3 class="h6 text-center text-secondary">
+                  <h3 class="h6 text-center text-primary" i18n>
                     Peer-to-Peer Energy Trading
                   </h3>
-                  <p class="mb-0 text-justify">
+                  <p class="mb-0 text-justify" i18n>
                     Solar Bankers is developing a Peer-to-peer online platform
                     that enables end users to trade electricity among themselves
                     in a free, open market. It is simple, fast, secure and
@@ -67,7 +73,7 @@
             <!-- SVG Mockups -->
             <figure id="SVGlaptopAndIphoneID1" class="ie-laptop-and-iphone">
               <img
-                data-aos="fade-right"
+                data-aos="fade-in"
                 data-aos-duration="1000"
                 data-aos-delay="500"
                 src="/assets/img/laptop-and-iphone.png"
