--- a/etp/src/app/modules/home/contact/contact.component.html
+++ b/etp/src/app/modules/home/contact/contact.component.html
@@ -33,6 +33,7 @@
               data-aos="fade-up"
               data-aos-duration="1000"
               data-aos-delay="900"
+              i18n
             >
               Drop us a message
             </h3>
@@ -40,7 +41,8 @@
               data-aos="fade-up"
               data-aos-duration="1000"
               data-aos-delay="1200"
-              class="text-secondary"
+              class="text-primary"
+              i18n
             >
               Find the right solution.
             </p>
@@ -50,7 +52,7 @@
             <div class="row mx-gutters-2">
               <div class="col-md-6 mb-3">
                 <!-- Input -->
-                <label class="sr-only">First name</label>
+                <label class="sr-only" i18n>First name</label>
 
                 <div class="js-form-message">
                   <div class="input-group">
@@ -72,7 +74,7 @@
 
               <div class="col-md-6 mb-3">
                 <!-- Input -->
-                <label class="sr-only">Last name</label>
+                <label class="sr-only" i18n>Last name</label>
 
                 <div class="js-form-message">
                   <div class="input-group">
@@ -96,7 +98,7 @@
 
               <div class="col-md-12 mb-3">
                 <!-- Input -->
-                <label class="sr-only">Email address</label>
+                <label class="sr-only" i18n>Email address</label>
 
                 <div class="js-form-message">
                   <div class="input-group">
@@ -121,7 +123,7 @@
 
             <!-- Input -->
             <div class="mb-5">
-              <label class="sr-only">How can we help you?</label>
+              <label class="sr-only" i18n>How can we help you?</label>
 
               <div class="js-form-message input-group">
                 <textarea
@@ -155,7 +157,7 @@
                   data-success-class="u-has-success"
                 />
                 <label class="custom-control-label" for="newsletterCheckbox">
-                  <small>I want to receive ETP Newsletters</small>
+                  <small i18n>I want to receive ETP Newsletters</small>
                 </label>
               </div>
             </div>
@@ -169,6 +171,7 @@
             data-aos-delay="1500"
             type="submit"
             class="btn btn-dark transition-3d-hover"
+            i18n
           >
             Submit
           </button>
@@ -194,7 +197,7 @@
     </div>
 
     <div class="text-center">
-      <p class="small">You'll hear from us within 1-2 business days.</p>
+      <p class="small" i18n>You'll hear from us within 1-2 business days.</p>
     </div>
   </div>
 </div>
