--- a/etp/src/app/modules/home/hero/hero.component.html
+++ b/etp/src/app/modules/home/hero/hero.component.html
@@ -2,49 +2,29 @@
 <div class="container space-2 space-top-md-4 space-top-lg-3 space-bottom-lg-2">
   <div class="row justify-content-lg-between mb-7">
     <div
-      class="col-lg-5 mb-7 mb-lg-0"
+      class="col-lg-12 text-center mb-7 mb-lg-0"
       data-aos="fade-up"
       data-aos-duration="1000"
       data-aos-delay="200"
     >
-      <!-- Info -->
-      <div class="mb-5 mt-3">
-        <h1 class="h2 font-weight-medium mb-3">
-          Get Extra Watts From Your Neighbor.
-        </h1>
-        <p>
-          Use your electricity as a commodity. You can choose how to use it and
-          who to sell it to. P2P energy trading is an efficient way of
-          maintaining competitive electricity prices in the wholesale market.
-        </p>
+      <!-- Content -->
+      <div class="container space-2 space-md-3">
+        <div class="text-center w-lg-80 mx-auto">
+          <h1
+            class="text-white display-2 font-size-md-down-5 font-weight-semi-bold"
+            i18n
+          >
+            Energy Trading Platform
+          </h1>
+        </div>
+
+        <div class="text-center w-lg-40 mx-auto">
+          <p class="lead text-white-70" i18n>
+            by solar bankers
+          </p>
+        </div>
       </div>
-
-      <div class="d-flex align-items-center flex-wrap">
-        <a
-          class="btn btn-soft-dark btn-wide transition-3d-hover"
-          routerLink="/auth"
-          >Get Started</a
-        >
-      </div>
-
-      <!-- End Info -->
-    </div>
-
-    <div class="col-lg-6">
-      <!-- SVG Illustration -->
-      <figure id="SVGHero" class="w-md-75 w-lg-100 mx-auto">
-        <img
-          data-aos="fade-left"
-          data-aos-delay="1200"
-          data-aos-easing="linear"
-          data-aos-duration="1000"
-          class="img-fluid"
-          src="../../assets/img/home/heros.png"
-          alt="Image Description"
-          data-parent="#SVGHero"
-        />
-      </figure>
-      <!-- End SVG Illustration -->
+      <!-- End Content -->
     </div>
   </div>
 </div>
