--- a/etp/src/app/modules/home/landing/landing.component.html
+++ b/etp/src/app/modules/home/landing/landing.component.html
@@ -1,15 +1,15 @@
 <div class="home-wrapper" id="home">
   <!-- ========== HEADER ========== -->
   <header id="header" [class]="navClass">
-    <div class="u-header__section py-2">
+    <div class="u-header__section">
       <!-- Topbar -->
 
       <!-- End Topbar -->
 
-      <div id="logoAndNav" class="container">
+      <div id="logoAndNav">
         <!-- Nav -->
         <nav
-          class="navbar navbar-expand-md u-header__navbar u-header__navbar--no-space"
+          class="navbar container navbar-expand-lg u-header__navbar u-header__navbar--no-space"
         >
           <!-- Logo -->
           <a
@@ -17,20 +17,18 @@
             href=""
             aria-label="Front"
           >
-            <img
-              src="https://www.solarbankers.org/static/logo.png"
-              alt="solarbankers"
-              class="img-fluid"
-            />
+            <img [src]="headerLogo" alt="solarbankers" [class]="logo" />
           </a>
           <!-- End Logo -->
 
           <!-- Responsive Toggle Button -->
           <button
             type="button"
-            class="navbar-toggler btn u-hamburger"
+            class="navbar-toggler btn btn-trans btn-icon right-5"
             aria-label="Toggle navigation"
-            (click)="isMenuCollapsed = !isMenuCollapsed"
+            (click)="
+              isMenuCollapsed = !isMenuCollapsed; languageDropdown = false
+            "
           >
             <span id="hamburgerTrigger" class="u-hamburger__box">
               <span class="u-hamburger__inner"></span>
@@ -57,6 +55,7 @@
                   id="homeMegaMenu"
                   class="nav-link u-header__nav-link"
                   href="#home"
+                  i18n
                   >Home</a
                 >
               </li>
@@ -73,6 +72,7 @@
                   id="pagesMegaMenu"
                   class="nav-link u-header__nav-link"
                   href="#about"
+                  i18n
                   >About</a
                 >
               </li>
@@ -89,6 +89,7 @@
                   id="blogMegaMenu"
                   class="nav-link u-header__nav-link"
                   href="#advantages"
+                  i18n
                   >Why</a
                 >
               </li>
@@ -105,16 +106,14 @@
                   id="blogMegaMenu"
                   class="nav-link u-header__nav-link"
                   href="#contact"
+                  i18n
                   >Contact</a
                 >
               </li>
               <!-- End Contact-->
               <!-- Button -->
               <li class="nav-item u-header__nav-last-item">
-                <a
-                  class="btn btn-sm btn-dark transition-3d-hover"
-                  routerLink="/auth/"
-                >
+                <a [class]="headerButton" routerLink="/auth/" i18n>
                   Get Started
                 </a>
               </li>
@@ -123,15 +122,61 @@
           </div>
           <!-- End Navigation -->
         </nav>
+        <div class="lang">
+          <button
+            [class]="languageButton"
+            type="button"
+            (click)="
+              languageDropdown = !languageDropdown; isMenuCollapsed = true
+            "
+          >
+            <i class="icon-globe" aria-hidden="true"></i>
+          </button>
+
+          <div [class]="languagePos" *ngIf="languageDropdown">
+            <ul class="list px-0">
+              <li>
+                <a href="/en/">
+                  <img
+                    src="/assets/svg/usa.svg"
+                    alt=""
+                    width="25px"
+                    class="d-inline-block mr-3"
+                  />
+                  <span class="d-inline-block d-sm-none">EN</span>
+                  <span class="d-none d-sm-inline-block" i18n>English</span>
+                </a>
+              </li>
+              <li>
+                <a href="/tr/">
+                  <img
+                    src="/assets/svg/turkey.svg"
+                    alt=""
+                    width="25px"
+                    class="d-inline-block mr-3"
+                  />
+                  <span class="d-inline-block d-sm-none ml-auto">TR</span>
+                  <span class="d-none d-sm-inline-block ml-auto" i18n
+                    >Turkish</span
+                  >
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- End Nav -->
       </div>
     </div>
   </header>
 
   <!-- ========== MAIN CONTENT ========== -->
-  <main id="content" role="main">
+  <main
+    id="content"
+    role="main"
+    (click)="languageDropdown = false; isMenuCollapsed = true"
+  >
     <!-- hero  -->
-    <div id="homes">
+    <div id="homes" class="hero">
       <hero></hero>
     </div>
     <!-- End of hero  -->
@@ -225,7 +270,7 @@
               <span class="fas fa-phone btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-dark font-weight-normal mb-0">Call us</h4>
+              <h4 class="h6 text-dark font-weight-normal mb-0" i18n>Call us</h4>
               <span class="d-block font-size-1">+90(232)503 6718</span>
             </div>
           </div>
@@ -239,7 +284,7 @@
               <span class="fas fa-envelope btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-dark font-weight-normal mb-0">
+              <h4 class="h6 text-dark font-weight-normal mb-0" i18n>
                 Email us
               </h4>
               <span class="d-block font-size-1">info@solarbankers.org</span>
@@ -255,7 +300,7 @@
               <span class="fas fa-map-marker-alt btn-icon__inner"></span>
             </span>
             <div class="media-body">
-              <h4 class="h6 text-dark font-weight-normal mb-0">Address</h4>
+              <h4 class="h6 text-dark font-weight-normal mb-0" i18n>Address</h4>
               <span class="d-block font-size-1"
                 >Mah. Gülbahçhe Cadç İYTE Teknopark İzmir A9 Binası, No. 1/44/4
                 Urla/İzmir</span
@@ -272,7 +317,7 @@
       <ul class="list-inline mb-4">
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-facebook btn-bg-transparent"
             href="https://www.facebook.com/solarbankerseurope/"
           >
             <span class="fab fa-facebook-f btn-icon__inner h6"></span>
@@ -280,7 +325,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-twitter btn-bg-transparent"
             href="https://twitter.com/solarbankers_?lang=en"
           >
             <span class="fab fa-twitter btn-icon__inner h6"></span>
@@ -288,7 +333,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-success btn-bg-transparent"
             href="https://t.me/solarbankersICO"
           >
             <span class="fab fa-telegram btn-icon__inner h6"></span>
@@ -296,7 +341,7 @@
         </li>
         <li class="list-inline-item">
           <a
-            class="btn btn-sm btn-icon btn-soft-dark btn-bg-transparent"
+            class="btn btn-sm btn-icon btn-soft-info btn-bg-transparent"
             href="https://www.linkedin.com/company/solar-bankers-turkey/"
           >
             <span class="fab fa-linkedin btn-icon__inner h6"></span>
