--- a/etp/src/app/modules/home/landing/landing.component.scss
+++ b/etp/src/app/modules/home/landing/landing.component.scss
@@ -1,9 +1,75 @@
+.home-wrapper {
+  max-width: 100vw;
+  overflow-x: hidden !important;
+}
 #contact {
   padding: 100px 0 50px;
 }
-.lang a {
-  cursor: pointer;
-  &:hover {
-    color: #b99745;
+.lang {
+  position: absolute;
+  top: 0;
+  right: 0;
+  button {
+    position: absolute;
   }
+  .btn-lang {
+    right: 0;
+    top: 2em;
+    display: block;
+  }
+  .btn-trans {
+    color: #ccc;
+    cursor: pointer;
+    &:hover {
+      color: #b99745;
+    }
+  }
+
+  .btn-scroll-lang {
+    right: 0;
+    top: 0.8em;
+  }
+  .dropdown {
+    // position: fixed;
+    cursor: pointer;
+    background-color: white;
+    height: auto;
+    padding: 0px 20px 5px;
+    width: 100%;
+    right: 10px;
+    transition: all 0.3s;
+    animation: slideInUp;
+    animation-duration: 100ms;
+    border-top: 1.5px solid #b99745;
+    ul li {
+      margin: 10px auto;
+      width: 100%;
+    }
+  }
+}
+.scroll-top {
+  top: 70px;
+}
+
+.top {
+  top: 90px;
+}
+.right-5 {
+  margin-right: 3.2rem;
+}
+
+.hero {
+  background-image: url("/assets/img/System.gif");
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+  background-size: cover;
+  // padding: 5vh 0;
+}
+.width-sm {
+  width: 6.5rem !important;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
