--- a/etp/src/app/modules/settings/login-security/login-security.component.scss
+++ b/etp/src/app/modules/settings/login-security/login-security.component.scss
@@ -19,3 +19,16 @@ button {
   height: 30px;
   line-height: 1;
 }
+input,
+textarea {
+  background-color: $darkbg !important;
+  caret-color: $primary;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 3px;
+  border: 1px solid $bg2 !important;
+  &:focus {
+    background-color: $darkbg !important;
+    border: 1px solid $primary !important;
+  }
+}
