--- a/etp/src/app/modules/settings/profile-details/profile-details.component.scss
+++ b/etp/src/app/modules/settings/profile-details/profile-details.component.scss
@@ -29,3 +29,16 @@ button {
   line-height: 1;
   position: relative;
 }
+input,
+textarea {
+  background-color: $darkbg !important;
+  caret-color: $primary;
+  color: #fff;
+  font-weight: 300;
+  border-radius: 3px;
+  border: 1px solid $bg2 !important;
+  &:focus {
+    background-color: $darkbg !important;
+    border: 1px solid $primary !important;
+  }
+}
