--- a/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
+++ b/etp/src/app/modules/snippets/dashboard-nav/log-msg/log-msg.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-5 col-6">
             <i
-              class="fa fa-info-circle text-primary mx-4"
+              class="fa fa-info-circle text-info mx-4"
               aria-hidden="true"
               *ngIf="item.status === 'info'"
             ></i>
