--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -26,7 +26,7 @@ $etp-theme: mat-light-theme($etp-primary, $etp-accent, $etp-warn);
 @include angular-material-theme($etp-theme);
 
 $enable-grid-classes: false;
-$primary: #1f8efa;
+$primary: #b99745;
 $secondary: #657d95;
 $success: #05c985;
 $danger: #ee423d;
@@ -49,7 +49,9 @@ li {
   list-style: none;
 }
 body {
-  margin: 0;
+  margin: 0 !important;
+  max-width: 100vw;
+  overflow-x: hidden !important;
 }
 
 * {
@@ -61,10 +63,7 @@ body {
 .u-header__nav-item:focus .u-header__nav-link {
   color: #b99745 !important;
 }
-.u-header__navbar-brand,
-.u-header__navbar-brand > img {
-  width: 6.75rem !important;
-}
+
 .me-header {
   right: 0;
   left: 0;
@@ -98,7 +97,7 @@ textarea:focus {
   .title {
     font-size: 1.7rem;
     font-weight: 400;
-    color: $darkbg;
+    color: white;
     text-align: center;
   }
 }
@@ -117,24 +116,23 @@ textarea:focus {
   label {
     font-weight: 400;
     font-size: 14px;
-    color: $dark;
+    color: white;
   }
   input,
   textarea {
-    background-color: $darkbg;
-    caret-color: #1f8efa;
-    color: white !important;
+    // background-color: $bg2;
+    caret-color: $primary;
     font-weight: 300;
     border-radius: 3px;
-    border: none !important;
+    // border: 1px solid $darkbg !important;
     &:focus {
-      background-color: $darkbg !important;
+      // background-color: $bg2 !important;
       border: 1px solid $primary !important;
     }
   }
   input {
     width: 100%;
-    height: 30px;
+    height: 35px;
   }
   input[type="date"] {
     position: relative;
@@ -233,7 +231,8 @@ textarea:focus {
   }
 
   .home-wrapper {
-    padding-left: 10px;
+    // padding-left: 10px;
+    width: 100%;
     .heading {
       margin: 30% auto 0;
     }
